; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_http_return.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_http_return.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@no_cache_headers = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"text/javascript; charset=UTF-8\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @http_return(%struct.connection* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.connection*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @strlen(i8* %10)
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %6, align 4
  br label %13

13:                                               ; preds = %9, %3
  %14 = load %struct.connection*, %struct.connection** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* @no_cache_headers, align 4
  %17 = call i32 @write_basic_http_header(%struct.connection* %14, i32 200, i32 0, i32 %15, i32 %16, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.connection*, %struct.connection** %4, align 8
  %19 = getelementptr inbounds %struct.connection, %struct.connection* %18, i32 0, i32 0
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @write_out(i32* %19, i8* %20, i32 %21)
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @write_basic_http_header(%struct.connection*, i32, i32, i32, i32, i8*) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
